@@ -1,16 +1,16 @@
 <div class="container py-4">
-    <div *ngIf="item && !loading.isRunning(); else loadingTemplate">
+    <div class="col-lg-8 center p-0" *ngIf="item && !loading.isRunning(); else loadingTemplate">
         <p class="text-center mb-2">You are able to track your order here!</p>
         <div class="alert alert-danger mb-3" *ngIf="item?.isPaid && item?.status == 'new'">Your payslip was rejected! Please upload again!</div>
         <ws-invoice [item]="item" [showDeliveryDetails]="item.status !== 'new'" [isPublic]="true" [showStatusDetails]="item.status !== 'new'"></ws-invoice>
         <div *ngIf="item.status === 'new'" class="row no-gutters justify-content-center">
-            <div class="mb-3 mr-lg-2 col-lg-3">
+            <div class="mb-3 mr-lg-3 col-lg-4">
                 <button class="btn btn-receipt" [disabled]="uploadLoading.isRunning()" onclick="document.getElementById('updatePayslipInput').click()">Upload Payslip</button>
                 <ws-uploader [id]="'updatePayslipInput'" [max]="1"
                         [input]="uploadingFiles"
                         (output)="fileChangeEvent($event)"></ws-uploader>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-4">
                 <button [disabled]="!uploadingFiles?.length || uploadLoading.isRunning()" class="btn btn-receipt" (click)="uploadPayslip()">
                     <ws-spinner class="mr-2" *ngIf="uploadLoading.isRunning()" [width]="15" [height]="15" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>Confirm</button>
             </div>
