@@ -57,7 +57,7 @@
                 <thead>
                     <th class="font-weight-bold">Description</th>
                     <th class="font-weight-bold text-center">Quantity</th>
-                    <th class="text-right font-weight-bold" width="140">Price (MYR)</th>
+                    <th class="text-right font-weight-bold" width="120">Price (MYR)</th>
                 </thead>
                 <tbody>
                     <tr *ngFor="let receiptItem of item?.items">
