@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     margin: 0;
-    font-weight: 300;
+    font-weight: 400;
     font-family: 'Segoe UI';
 }
